# UTL

./: .clang-format  .cppcheck  .gitignore  404.md  CMakeLists.txt  README.md  _config.yml  actions.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
bash/: colors.sh  create_single_header.sh  functions.sh  run_static_analysis.sh  variables.sh
benchmarks/: CMakeLists.txt  benchmark.hpp  benchmark_integral.cpp  benchmark_json.cpp  benchmark_log.cpp  benchmark_mvl.cpp  benchmark_parallel.cpp  benchmark_profiler.cpp  benchmark_random.cpp
docs/: dev_project_style.md  dev_roadmap.md  guide_building_project.md  guide_reserved_names.md  guide_selecting_modules.md  module_bit.md  module_enum_reflect.md  module_integral.md  module_json.md  module_log.md  module_math.md  module_mvl.md  module_parallel.md  module_predef.md  module_profiler.md  module_progressbar.md  module_random.md  module_shell.md  module_sleep.md  module_stre.md  module_struct_reflect.md  module_table.md  module_time.md  module_timer.md
docs/blog/: map_macro_reflection.md
include/UTL/: bit.hpp  enum_reflect.hpp  integral.hpp  json.hpp  log.hpp  math.hpp  mvl.hpp  parallel.hpp  predef.hpp  profiler.hpp  progressbar.hpp  random.hpp  shell.hpp  sleep.hpp  stre.hpp  struct_reflect.hpp  table.hpp  time.hpp  timer.hpp
single_include/: UTL.hpp
tests/: CMakeLists.txt  test.hpp  test_bit.cpp  test_enum_reflect.cpp  test_integral.cpp  test_json.cpp  test_log.cpp  test_math.cpp  test_random.cpp  test_stre.cpp  test_struct_reflect.cpp
